--- a/Yelp/Base.lproj/Main.storyboard
+++ b/Yelp/Base.lproj/Main.storyboard
@@ -39,9 +39,12 @@
                                                         <constraint firstAttribute="height" constant="65" id="yxf-sS-cbp"/>
                                                     </constraints>
                                                 </imageView>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="272-c8-Rfg">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="272-c8-Rfg">
                                                     <rect key="frame" x="81" y="31" width="83" height="15"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="15" id="KNX-mB-TgR"/>
+                                                        <constraint firstAttribute="width" constant="83" id="taS-Ga-XuB"/>
+                                                    </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1. Grand Pu Bah" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ddk-su-gj3">
                                                     <rect key="frame" x="81" y="7" width="115" height="18"/>
@@ -49,30 +52,26 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="469 Reviews" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WWL-7L-BMX">
-                                                    <rect key="frame" x="172" y="30" width="78" height="16"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="469 Reviews" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WWL-7L-BMX">
+                                                    <rect key="frame" x="172" y="32" width="62" height="12"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="88 Divison St, Mission Bay" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PNB-7F-JkP">
-                                                    <rect key="frame" x="81" y="51" width="161" height="16"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="88 Divison St, Mission Bay" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PNB-7F-JkP">
+                                                    <rect key="frame" x="81" y="51" width="231" height="14.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Thai, Seafood, Salad" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KnF-2l-gc7">
-                                                    <rect key="frame" x="81" y="66" width="125" height="16"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Thai, Seafood, Salad" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KnF-2l-gc7">
+                                                    <rect key="frame" x="81" y="68.5" width="116.5" height="14.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="$$" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K7C-go-mKI">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$$" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K7C-go-mKI">
                                                     <rect key="frame" x="288" y="30" width="17" height="16"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
@@ -85,14 +84,26 @@
                                                 </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="WWL-7L-BMX" firstAttribute="centerY" secondItem="272-c8-Rfg" secondAttribute="centerY" id="02W-ec-v4Q"/>
+                                                <constraint firstItem="WWL-7L-BMX" firstAttribute="leading" secondItem="272-c8-Rfg" secondAttribute="trailing" constant="8" id="Bud-r7-VAq"/>
+                                                <constraint firstItem="PNB-7F-JkP" firstAttribute="top" secondItem="272-c8-Rfg" secondAttribute="bottom" constant="5" id="I5C-le-7Fl"/>
+                                                <constraint firstAttribute="trailing" secondItem="K7C-go-mKI" secondAttribute="trailing" constant="15" id="P20-Rd-5u8"/>
+                                                <constraint firstItem="272-c8-Rfg" firstAttribute="top" secondItem="ddk-su-gj3" secondAttribute="bottom" constant="6" id="WlW-Ow-4Y4"/>
                                                 <constraint firstItem="ddk-su-gj3" firstAttribute="leading" secondItem="9pz-gZ-OxS" secondAttribute="trailing" constant="8" id="ZH5-jH-d0q"/>
                                                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="9pz-gZ-OxS" secondAttribute="bottom" constant="12" id="eau-Uc-vr4"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="KnF-2l-gc7" secondAttribute="bottom" constant="12" id="eri-th-brv"/>
                                                 <constraint firstAttribute="trailing" secondItem="WIO-XW-gKX" secondAttribute="trailing" constant="15" id="gG9-K3-5sX"/>
+                                                <constraint firstAttribute="trailing" secondItem="PNB-7F-JkP" secondAttribute="trailing" constant="8" id="hfA-dN-b2p"/>
+                                                <constraint firstItem="KnF-2l-gc7" firstAttribute="top" secondItem="PNB-7F-JkP" secondAttribute="bottom" constant="3" id="i6y-1g-HTp"/>
                                                 <constraint firstItem="ddk-su-gj3" firstAttribute="top" secondItem="mbA-Mk-kQa" secondAttribute="top" constant="7" id="ko4-Sn-42Q"/>
+                                                <constraint firstItem="PNB-7F-JkP" firstAttribute="leading" secondItem="9pz-gZ-OxS" secondAttribute="trailing" constant="8" id="l4V-j8-sPq"/>
                                                 <constraint firstItem="WIO-XW-gKX" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ddk-su-gj3" secondAttribute="trailing" constant="8" id="l6x-5f-FCf"/>
+                                                <constraint firstItem="KnF-2l-gc7" firstAttribute="leading" secondItem="PNB-7F-JkP" secondAttribute="leading" id="l7n-x9-EdQ"/>
                                                 <constraint firstItem="WIO-XW-gKX" firstAttribute="top" secondItem="mbA-Mk-kQa" secondAttribute="top" constant="9" id="qQb-E3-SQx"/>
+                                                <constraint firstItem="272-c8-Rfg" firstAttribute="leading" secondItem="9pz-gZ-OxS" secondAttribute="trailing" constant="8" id="qqI-oA-RvA"/>
                                                 <constraint firstItem="9pz-gZ-OxS" firstAttribute="leading" secondItem="mbA-Mk-kQa" secondAttribute="leading" constant="8" id="rbk-r9-yz7"/>
                                                 <constraint firstItem="9pz-gZ-OxS" firstAttribute="top" secondItem="mbA-Mk-kQa" secondAttribute="top" constant="7" id="rlN-EC-w2J"/>
+                                                <constraint firstItem="K7C-go-mKI" firstAttribute="top" secondItem="WIO-XW-gKX" secondAttribute="bottom" constant="5" id="zQT-Bg-9Xm"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
